<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, GroupClearingActivity!</string>
    <string name="app_name">Group Clearing</string>
    <string name="add_new_event">Add new event</string>
    <string name="add_new_participant">Add new participant</string>
    <string name="event_name">Event name</string>
    <string name="event_note">Note</string>
    <string name="event_from_date">From:</string>
    <string name="date_placeholder">12/12/2012</string>
    <string name="event_to_date">To:</string>
    <string name="event_view_participants">Participants</string>
    <string name="event_view_transactions">Transactions</string>
    <string name="change">Change</string>
    <string name="event_transactions">Transactions</string>
    <string name="event_delete">Delete</string>
    <string name="about">About</string>
    <string name="info_version">Version 1.0</string>
    <string name="info_author">© Strašlivý Uragán, 2011</string>
    <string name="program_name">Group Clearing</string>
    <string name="save_failed_alert">Failed to save some events.</string>
    <string name="alert_title">Group Clearing Alert</string>
    <string name="no_external_storage_alert">Could not get access to the external storage.</string>
    <string name="syntax_error_alert">Some events could not be read due to a syntax error.</string>
    <string name="participant_name">Name of the Participant</string>
    <string name="participant_delete">Delete</string>
    <string name="transaction_delete">Delete</string>
    <string name="add_new_transaction">Add new transaction</string>
    <string name="transaction_name">Transaction name:</string>
    <string name="transaction_value">Value:</string>
    <string name="transaction_date">Date:</string>
    <string name="transaction_note">Note:</string>
    <string name="transaction_participants">Participants:</string>
    <string name="trans_part_name_placeholder">Name of participant</string>
    <string name="trans_value_placeholder">0,- </string>
    <string name="split_evenly">Split evenly</string>
    <string name="transaction_paid_by">Paid by:</string>
    <string name="transaction_paid_by_prompt">Select transaction receiver:</string>
    <string name="transaction_no_receiver">--</string>
    <string name="number_hint">0.00</string>
    <string name="balance">Balance:</string>
    <string name="transaction_participant_value">Value:</string>
    <string name="pev_compute">Compute</string>
    <string name="split_warning">Note, that if you proceed, values in the transaction will be reseted.</string>
    <string name="do_not_show">Do not show this message next time</string>
    <string name="gc_warning_title">Group Clearing Warning</string>
    <string name="suggest_receiver">Who should pay</string>
    <string name="suggest_receiver_cond">Payer…</string>
    <string name="suggest_receiver_msg_format" formatted="false">I suggest that next pays %s, whose balance is %s. Should I make him pay?</string>
    <string name="gc_yesno_title">Group Clearing</string>
    <string name="suggest_clearance">Suggest clearance</string>
    <string name="suggest_clearance_cond">Clearance…</string>
    <string name="sctable_header_payer">Payer</string>
    <string name="sctable_header_receiver">Receiver</string>
    <string name="sctable_header_amount">Amount</string>
    <string name="sc_create_transactions">Create transactions</string>
    <string name="sc_transaction_name">Clearing</string>
    <string name="pl_sum_label">Sum:</string>
    <string name="transaction_delete_cond">Delete</string>
    <string name="currency_colon">Currency:</string>
    <string name="currency_choose">Choose currency</string>
    <string name="change_rate">Rate&#8230;</string>
    <string name="re_currency_left_plcholder">Rate: 1EUR = </string>
    <string name="re_currency_left_fmt" formatted="false">Rate: 1%s = </string>
    <string name="re_currency_right_plcholder"> CZK</string>
    <string name="re_currency_right_fmt"> %s</string>
    <string name="re_save_default">Save as default</string>
    <string name="re_label">Set currency rate&#8230;</string>
    <string name="menu_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="support_multiple_currencies">Support multiple currencies</string>
    <string name="convert_currencies">Convert values to event currency</string>
    <string name="sctable_currency">Clearance in</string>
    <string name="split_warning_settings_label">Show warning when split evenly checkbox is switched.</string>
</resources>