<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <CheckBox
        android:id="@+id/mult_currencies_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/support_multiple_currencies"
        android:onClick="onSupportMultipleCurrenciesChanged" />

    <CheckBox
        android:id="@+id/convert_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convert_currencies"
        android:onClick="onConvertToEventCurrencyChanged" />

</LinearLayout>