<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sctable_header_row"
    style="@style/sctable_header_row"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/sctable_header_payer"
        style="@style/sctable_header_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sctable_header_payer" />

    <TextView
        android:id="@+id/sctable_header_receiver"
        style="@style/sctable_header_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sctable_header_receiver" />

    <TextView
        android:id="@+id/sctable_header_amount"
        style="@style/sctable_header_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sctable_header_amount" />

</TableRow>