<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dip"
        android:text="@string/re_label" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/re_left_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dip"
            android:text="@string/re_currency_left_plcholder" />

        <EditText
            android:id="@+id/re_edit"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:lines="1"
            android:digits="0123456789.,"
            android:hint="@string/number_hint"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:minEms="6" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/re_right_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="20dip"
            android:text="@string/re_currency_right_plcholder" />
    </LinearLayout>

    <Button
        android:id="@+id/re_save_default_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:minEms="10"
        android:text="@string/re_save_default" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/re_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:text="@android:string/cancel" />

        <Button
            android:id="@+id/re_ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:text="@android:string/ok" />
    </LinearLayout>

</LinearLayout>